--------------------------------------------------------------------------------
drkns 04.02.2021 19:06:02 +0000 - build 5740

1. Don't add Unicode BOM to file lists created with !@!.

--------------------------------------------------------------------------------
svs 03.02.2021 16:46:34 +0300 - build 5739

1. SQLite 3.34.1

--------------------------------------------------------------------------------
drkns 02.02.2021 01:49:01 +0000 - build 5738

1. Warnings, typos, cleanup.

--------------------------------------------------------------------------------
drkns 30.01.2021 23:18:23 +0000 - build 5737

1. 0003845: Relax "Compare Folders" time comparison precision.

--------------------------------------------------------------------------------
drkns 30.01.2021 17:18:13 +0000 - build 5736

1. Correction of 5735.

--------------------------------------------------------------------------------
drkns 30.01.2021 13:06:35 +0000 - build 5735

1. Forum: Modifier keys close the Fast Find.

--------------------------------------------------------------------------------
drkns 30.01.2021 00:37:49 +0000 - build 5734

1. Refactoring.

--------------------------------------------------------------------------------
drkns 27.01.2021 18:59:03 +0000 - build 5733

1. Encoding validation for file lists created with !@!, descriptions and some other places.

2. Minor lng & hlf corrections.

--------------------------------------------------------------------------------
drkns 26.01.2021 11:53:23 +0000 - build 5732

1. gh-240: Temp file with list of selected file names has missing entries

--------------------------------------------------------------------------------
drkns 23.01.2021 21:25:01 +0000 - build 5731

1. Workaround for https://github.com/microsoft/terminal/issues/8866

--------------------------------------------------------------------------------
drkns 14.01.2021 17:50:34 +0000 - build 5730

1. 5728 once again.
