@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 09.02.2021 17:37:00 +0000 - build 5741
+
+1. Always preserve Last Write Time when copying files.
+
+--------------------------------------------------------------------------------
 drkns 04.02.2021 19:06:02 +0000 - build 5740
 
 1. Don't add Unicode BOM to file lists created with !@!.
